cmake_minimum_required(VERSION 3.21)
include($ENV{XMOS_CMAKE_PATH}/xcommon.cmake)
project(lib_ethernet_tests)

add_subdirectory(test_tx)
add_subdirectory(test_rx)
add_subdirectory(test_link_status)
add_subdirectory(test_appdata)
add_subdirectory(test_avb_traffic)
add_subdirectory(test_etype_filter)
add_subdirectory(test_rx_backpressure)
